k8s/apps/movies/radarr/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
        - name: radarr
          image: linuxserver/radarr:4.4.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7878
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: torrents
              mountPath: /downloads
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              memory: 1Gi
      volumes:
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: torrents
          persistentVolumeClaim:
            claimName: torrents
