k8s/apps/movies/radarr/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "radarr"
  annotations:
    cert-manager.io/cluster-issuer: default-issuer
    cert-manager.io/revision-history-limit: "1"

spec:
  ingressClassName: public
  rules:
    - host: "radarr.movies.gastbob40.ovh"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  name: http
  tls:
    - hosts:
        - "radarr.movies.gastbob40.ovh"
      secretName: "radarr-movies-tls"
